--- a/style/solutionMVNX.css
+++ b/style/solutionMVNX.css
@@ -501,7 +501,7 @@ body {
  }
 
 
- html {
+ /* html {
     font-size: 1rem;
   }
   
@@ -521,6 +521,6 @@ body {
     html {
       font-size: 1.6rem;
     }
-  }
+  } */
 
  
