--- a/style/solutionMVNX.css
+++ b/style/solutionMVNX.css
@@ -578,24 +578,34 @@ body {
  } */
 
 
- /* html {
-    font-size: 1rem;
+ html {
+    /* font-size: 1rem; */
   }
   
-  @media (min-width: 576px) {
+  @media (max-width: 576px) {
     html {
-      font-size: 1.2rem;
+      /* font-size: 1.2rem; */
+    }
+    .center-chip{
+        display: flex;
+        justify-content: center;
+        align-self: center;
     }
   }
   
-  @media (min-width: 768px)(md) {
+  @media (max-width: 768px) {
     html {
-      font-size: 1.4rem;
+      /* font-size: 1.4rem; */
+    }
+    .center-chip{
+        display: flex;
+        justify-content: center;
+        align-self: center;
     }
   }
   
   @media (min-width: 1200px) {
     html {
-      font-size: 1.6rem;
+      /* font-size: 1.6rem; */
     }
-  } */
+  }
