--- a/style/solutionMVNX.css
+++ b/style/solutionMVNX.css
@@ -232,11 +232,12 @@
 }
 
 .belowImage-bottom{
-    height: 30vw;
+    /* height: 30vw; */
     background-color: #d3ffeb;
     width: 100%;
     position: relative;
     padding: 0px !important;
+    z-index: 10000 !important;
 }
 
 
@@ -251,7 +252,8 @@
     bottom: 0;
     left: 0;
     transform-origin: top left;
-    transform: skewY(-4deg);
+    transform: skewY(-6deg);
+    /* z-index: -1; */
 }
 
 .non-skew{
@@ -515,10 +517,9 @@
     background-image: url('../assets/bg-2.svg') !important;
     background-repeat: no-repeat !important;
     background-size: cover !important;
-    background-position: center;
-    transform: skewY(0deg);
-    min-height: 403px;
-    height: 20vh;
+    /* background-position: center; */
+    /* transform: skewY(0deg); */
+    min-height: 300px;
 }
 
 
