--- a/style/solutionMVNX.css
+++ b/style/solutionMVNX.css
@@ -282,7 +282,8 @@
     transform: skewY(-6deg) !important;
 }
 .bg-circle-chip-1 {
-    background-color: #f5f5f5;
+    /* background-color: #f5f5f5; */
+    /* opacity: 0.08; */
     width : 100px;
     height: 100px;
     border-radius: 50%;
@@ -293,7 +294,7 @@
 }
 
 .bg-circle-chip-2 {
-    background-color: #f5f5f5;
+    /* background-color: #f5f5f5; */
     width : 100px;
     height: 100px;
     border-radius: 50%;
@@ -304,7 +305,8 @@
 }
 
 .bg-circle-chip-3 { 
-    background-color: #f5f5f5;
+    /* background-color: #7a839e; */
+    /* opacity: 0.08; */
     width : 100px;
     height: 100px;
     border-radius: 50%;
