--- a/style/solutionMVNX.css
+++ b/style/solutionMVNX.css
@@ -351,6 +351,14 @@
     padding-bottom: 100px;
 }
 
+.nav-item:hover{
+    border-bottom: 3px solid #FFFFFF !important;
+}
+
+.nav-item {
+    border-bottom: 3px solid transparent;
+}
+
 .com-bg-image-mobile {
     height: 350px;
     width  : 350px;
@@ -383,6 +391,40 @@
 .backgrouns-color-1 {
  background-color: #159bdd !important ;
 }
+
+.blue-button {
+    background-color: #159bdd !important ;
+    color : #FFFFFF;
+}
+
+.blue-button:hover{
+    background-color: #FFFFFF !important ;
+    color : #159bdd;
+}
+
+.green-button {
+    background-color: #43ce89 !important;
+    color: #FFFFFF;
+}
+
+.green-button:hover {
+    background-color: #FFFFFF !important;
+    color: #43ce89 !important;
+    border : 2px solid #f5f5f5;
+}
+
+.white-button{
+    background-color: #FFFFFF !important;
+    color: #43ce89 !important;
+}
+
+.white-button:hover{
+    background-color: #43ce89 !important;
+    color: #FFFFFF !important;
+    border : 2px solid #f5f5f5;
+}
+
+
 
 .backgrouns-color-2 {
     background-color: #7a839e !important;
@@ -489,7 +531,6 @@
     background-size: contain;
     background-repeat: no-repeat;
     height : 40px;
-    /* width : 100px; */
 }
 
 .linked-in {
@@ -603,6 +644,8 @@ body {
 }
 
 
+
+
 .cus-pad-2 {
     padding-bottom: 10px ;
 }
@@ -658,39 +701,53 @@ body {
   }
   
   @media (min-width: 1200px) {
-    html {
-      /* font-size: 1.6rem; */
-    }
+    
   }
 
-  #google_translate_element{
-      display: none;
-  }
-
-  .earth{
-      /* background-image: url('../assets/earth.jpg');
-      background-repeat: no-repeat;
-      background-size: contain; */
-      /* width : 30px;
-      height: 30px; */
-      cursor: pointer;
-      /* background-color: red; */
-      
-  }
-
-  .earth:hover + #google_translate_element {
+  /* #google_translate_element{
       display: block;
-      position: absolute;
-      right : 150px;
-  } 
+      background-color: #FFFFFF;
+      padding: 15px;
+  } */
 
+  .earth{     
+      cursor: pointer;
+      position: relative;
+  }
+
+#lang-wrapper1 {
+    display: none;
+}
+#lang-wrapper2 {
+    display: none;
+}
+
+#lang-wrapper1:hover {
+    display: block;
+}
+  #lang-wrapper {
+    z-index: 1000;
+  }
+
+  
+
+
+/* .earth:hover + #google_translate_element {
+    display: block !important;
+    position: absolute !important;
+    right : 10px !important;
+    z-index: 10000;
+}  */
+
+  /* 
+  
   #google_translate_element:hover {
     display: block;
     position: absolute;
-    right : 150px;
-  }
+    right : 10px;
+  } */
 .goog-te-gadget{
-        background-color: #FFFFFF;
+    background-color: #FFFFFF;
     z-index: 100000;
     height: 25px;
     overflow: hidden;
@@ -700,10 +757,10 @@ body {
     border : 0px;
     background-color: transparent;
     padding: 10px;
-    
 }
 
 #search-box:focus {outline:none!important;}
+
 
 .search{
     /* background-color: #FFFFFF; */
@@ -722,4 +779,8 @@ body {
 
 #search-box:focus + .search {
     border : 1px solid #FFFFFF;
+}
+
+#google_translate_element{
+    background-color: tomato !important;
 }
