--- a/style/solutionMVNX.css
+++ b/style/solutionMVNX.css
@@ -352,7 +352,7 @@
 }
 
 .nav-item:hover{
-    border-bottom: 3px solid #008cd1 !important;
+    border-bottom: 3px solid #42495b !important;
     
 }
 
