--- a/style/solutionMVNX.css
+++ b/style/solutionMVNX.css
@@ -402,6 +402,7 @@
 .blue-button:hover{
     background-color: #FFFFFF !important ;
     color : #159bdd;
+    border : 2px solid #f5f5f5;
 }
 
 .green-button {
@@ -689,6 +690,26 @@ body {
         justify-content: center;
         align-self: center;
     }
+
+    .footer-left{
+        display: flex;
+        align-items: center !important;
+    }
+    .footer-right{
+        display: flex;
+        justify-content: center !important;
+    }
+    .footer-right-inside{
+        display: flex;
+        justify-content: center !important;
+    }
+    .logo-footer{
+        background-position: center !important;
+    }
+    .main-footer-wrapper {
+        display: flex !important;
+        justify-content: center !important;
+    }
   }
   
   @media (max-width: 768px) {
@@ -699,6 +720,25 @@ body {
         display: flex;
         justify-content: center;
         align-self: center;
+    }
+    .footer-left{
+        display: flex !important;
+        align-items: center !important;
+    }
+    .footer-right{
+        display: flex!important;
+        justify-content: center !important;
+    }
+    .footer-right-inside{
+        display: flex;
+        justify-content: center !important;
+    }
+    .logo-footer{
+        background-position: center !important;
+    }
+    .main-footer-wrapper {
+        display: flex !important;
+        justify-content: center !important;
     }
   }
   
@@ -758,19 +798,18 @@ body {
 #search-box{
     border : 0px;
     background-color: transparent;
-    padding: 10px;
+    padding: 7px;
+
 }
 
 #search-box:focus {outline:none!important;}
 
 
 .search{
-    /* background-color: #FFFFFF; */
     margin-right: 10px;
     padding-left : 5px;
     padding-right: 15px;
     offset: none;
-    border-radius: 10px;
 }
 .div-3-p {
     padding-bottom: 100px !important;
