--- a/style/solutionMVNX.css
+++ b/style/solutionMVNX.css
@@ -260,11 +260,11 @@
     /* z-index: -1; */
 } */
 
-.non-skew{
+/* .non-skew{
     transform: skewY(3deg) !important;
     height : 100px !important;
     margin-top: 20px;
-}
+} */
 
 .non-skew-2{
     transform: skewY(4deg) !important;
@@ -278,9 +278,39 @@
 .non-skew-6{
     transform: skewY(6deg) !important;
 }
+
+.non-skew-61{
+    transform: skewY(6deg) !important;
+    /* position: absolute;
+    bottom : 0;
+    left : 0;
+    width: 100%; */
+    background-color: red;
+}
+
 .skew-6{
     transform: skewY(-6deg) !important;
 }
+
+.skew-61{
+    transform: skewY(-6deg) !important;
+    position: relative;
+}
+.skew-61::after {
+    position: absolute;
+    width: 100%;
+    /* height: 100%; */
+    content: "";
+    background-color: yellow;
+    top : 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    transform-origin: top left;
+    transform: skewY(6deg);
+    /* z-index: -1; */
+}
+
 .bg-circle-chip-1 {
     /* background-color: #f5f5f5; */
     /* opacity: 0.08; */
@@ -600,9 +630,9 @@
     z-index : 1000;
 }
 .bg-img-mvnx-div-3 {
-    background-image: url('../assets/bg-2.svg') !important;
+    background-image: url('../assets/fintech_banner.png') !important;
     background-repeat: no-repeat !important;
-    background-size: cover !important;
+    background-size: contain !important;
     /* background-position: center; */
     /* transform: skewY(0deg); */
     min-height: 300px;
@@ -622,9 +652,9 @@
     background-repeat: no-repeat;
     background-size: contain;
     width : 12px;
-    height: 100%;
+    height: 12px;
     background-position: center;
-    display: block;
+    /* display: block; */
     margin-right: 5px;
 }
 body {
@@ -646,7 +676,34 @@ body {
     border-radius: 20px !important;
 }
 
+.rotate {
+    transform: rotate(20deg);
+}
 
+.skew-div-one{
+    position: relative;
+    width: 100%;
+    height : 50vh;
+    background: #d3ffeb;
+}
+
+.skew-div-one::before{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background: red;
+    clip-path: polygon(100% 0,0 100%,100% 100%);
+}
+
+.row-one-bg-image{
+    background-image: url('../assets/fintech_banner.png'); 
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;  
+}
 
 
 .cus-pad-2 {
@@ -677,14 +734,30 @@ body {
  } */
 
 
- html {
-    /* font-size: 1rem; */
-  }
+ 
+ html { font-size: 1rem; }
   
   @media (max-width: 576px) {
     html {
-      /* font-size: 1.2rem; */
+      font-size: 0.7rem;
+      /* html { font-size: 1.25rem; } */
     }
+    h1 {
+        font-size: 1.7rem;
+    }
+    /* h2 {
+        font-size: 1.5rem;
+    }
+    h3 {
+        font-size: 1.2rem;
+    }
+    h4 {
+        font-size: 1rem;
+    }
+
+    h5 {
+        font-size: 0.8rem;
+    } */
     .center-chip{
         display: flex;
         justify-content: center;
@@ -714,7 +787,7 @@ body {
   
   @media (max-width: 768px) {
     html {
-      /* font-size: 1.4rem; */
+      font-size: 0.9rem;
     }
     .center-chip{
         display: flex;
@@ -831,3 +904,158 @@ nav{
     padding-bottom: 0px !important;
 }
 
+
+#diamond-shield {
+    width: 0;
+    height: 0;
+    border: 50px solid transparent;
+    border-bottom: 20px solid red;
+    position: relative;
+    top: -50px;
+  }
+  #diamond-shield:after {
+    content: '';
+    position: absolute;
+    left: -50px;
+    top: 20px;
+    width: 0;
+    height: 0;
+    border: 50px solid transparent;
+    border-top: 70px solid red;
+  }
+
+  .bgtest{
+    width: 100%;
+    float: left;
+    background-image: url("bg.png");
+    background-size: cover;
+    min-height: 494px;
+    background-repeat: no-repeat;
+    background-position: left;
+    height: auto;
+    position: relative
+}
+.overlay{
+    position: absolute;
+    top:25%
+}
+.opensans{
+    font-family: 'Open Sans', sans-serif;
+}
+h2{
+   color:#fff;
+   line-height: 34px
+}
+
+.bg-img-last {
+    background-image: url('../assets/footer-img.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.skew-main{
+    width: 100%;
+    position: relative;
+    background-color: orange;
+}
+.skew{
+    background-color: red;
+    position: absolute;
+    /* bottom: 35; */
+    width: 100%;
+    transform-origin: top right;
+    transform: skewY(-6deg);
+}
+
+.skew-rev{
+    background-color: blue;
+    position: absolute;
+    /* bottom: 35; */
+    width: 100%;
+    transform-origin: top left;
+    transform: skewY(-6deg);
+    height: 100%;
+    /* z-index: -1; */
+}
+
+.non-skew {
+    background-color: orange;
+    /* height: 100px; */
+    transform: skewY(6deg);
+    position: relative;
+    /* top : 10px; */
+    /* position: absolute; */
+    /* width: 100%; */
+}
+
+.no-skew {
+    background-color: orange;
+    position: relative;
+}
+
+.main-skew{
+    /* background-color: red; */
+    position: relative;
+    /* height: 100px; */
+    /* padding-top: 10% ;
+    padding-bottom: 10%; */
+}
+
+.sub-skew {
+    background-color: green;
+    /* height: 10px; */
+    width: 100%;
+    position: absolute;
+    transform-origin: top right;
+    transform: skewY(-6deg);
+    
+}
+
+.sub-two{
+    background-color: white;
+    /* height: 10px; */
+    width: 100%;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 0% 100%);
+    position: absolute;
+    /* transform-origin: top left; */
+    /* transform: skewY(6deg);    */
+}
+.bgtest{
+    width: 100%;
+    float: left;
+    background-image: url("../assets/fintech_banner.png");
+    background-size: cover;
+    min-height: 494px;
+    background-repeat: no-repeat;
+    background-position: left;
+    height: auto;
+    position: relative
+}
+.overlay{
+    position: absolute;
+    top:25%
+}
+.opensans{
+    font-family: 'Open Sans', sans-serif;
+}
+h2{
+   color:#fff;
+   line-height: 34px
+}
+
+.major-banner{
+    position: relative;
+}
+
+
+.banner-wrapper {
+    position: absolute;
+    z-index: 1000;
+    width: 100%;
+    top: 0;
+    left: 0;
+    height: 100%;
+}
+.m-banner-data{
+    position: absolute;
+}
