--- a/style/solutionMVNX.css
+++ b/style/solutionMVNX.css
@@ -754,6 +754,7 @@ body {
 
     h2 {
         font-size: 1.3rem;
+        line-height: 20px !important;
     }
     h4{
         font-size: 1.2rem;
