--- a/style/solutionMVNX.css
+++ b/style/solutionMVNX.css
@@ -486,6 +486,9 @@
     background-color: #06c164 !important;
 }
 
+.backgrouns-color-4 {
+    background-color: #5f43bb  !important;
+}
 .text-color-1 {
     color: #707070 !important;
 }
@@ -1078,4 +1081,12 @@ h2{
 }
 .m-banner-data{
     position: absolute;
+}
+
+.bg-m-banner{
+    background-image: url('../assets/fintech_banner.png');
+    background-repeat: no-repeat;
+    background-size: cover ;
+    min-height: 400px;
+    width: 100%;
 }
