--- a/style/solutionMVNX.css
+++ b/style/solutionMVNX.css
@@ -487,7 +487,8 @@
 }
 
 .backgrouns-color-4 {
-    background-color: #5f43bb  !important;
+    /* background-color: #5f43bb  !important; */
+    background-color: #6244B3 !important;
 }
 .text-color-1 {
     color: #707070 !important;
