--- a/style/solutionMVNX.css
+++ b/style/solutionMVNX.css
@@ -948,17 +948,7 @@ nav{
     border-top: 70px solid red;
   }
 
-  .bgtest{
-    width: 100%;
-    float: left;
-    background-image: url("bg.png");
-    background-size: cover;
-    min-height: 494px;
-    background-repeat: no-repeat;
-    background-position: left;
-    height: auto;
-    position: relative
-}
+  
 .overlay{
     position: absolute;
     top:25%
@@ -1049,11 +1039,15 @@ h2{
     float: left;
     background-image: url("../assets/fintech_banner.png");
     background-size: cover;
-    min-height: 494px;
+    /* min-height: 494px; */
+    min-height: 764px;
     background-repeat: no-repeat;
     background-position: left;
     height: auto;
-    position: relative
+    position: relative;
+    z-index: 1000;
+    /* position: absolute; */
+    /* margin-top: 56px; */
 }
 .overlay{
     position: absolute;
@@ -1090,4 +1084,28 @@ h2{
     background-size: cover ;
     min-height: 400px;
     width: 100%;
+}
+
+.up-skew {
+    clip-path: polygon(0% 0%, 100% 0%, 100% 50%, 0% 100%);
+    position: absolute;
+    background-color: #f5f5f5;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.down-skew {
+    clip-path: polygon(100% 100%, 100% 0%, 100% 50%, 0% 100%);
+    position: absolute;
+    background-color: #FFFFFF;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.l-div-pos {
+    /* position: absolute; */
 }
